# dungoens-and-rogues

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Artifact.cpp.F49A09F142968658.idx  Artifact.hpp.BE53000D0C57B8CC.idx  ArtifactEquipment.cpp.EE57E6752E88EFBC.idx  ArtifactWeapon.cpp.A86C0FFF00F77E0D.idx  ArtifactWeapon.hpp.A01793B724EED89B.idx  Enchanted.cpp.77F41E687AEC3C76.idx  Enchanted.hpp.DFFCA392E42F1990.idx  EnchantedWeapon.cpp.652ABF57B402E42F.idx  EnchantedWeapon.hpp.63A7CC4690E49DFB.idx  Equation.cpp.B0C13D52EBFD3E07.idx  Equation.hpp.52D381847F7617BA.idx  Equipment.hpp.9743E1E751337FDC.idx  Factor.cpp.4F642157A2B98EC3.idx  Factor.hpp.6F9A06083E8B87C6.idx  MixedWeapon.cpp.91E39619D735D623.idx  MixedWeapon.hpp.54A252C650784674.idx  Object.cpp.B43440AF5F8C781B.idx  Object.hpp.4B95CB4B0B6D315A.idx  Parameter.cpp.B88669EC6A640826.idx  Parameter.hpp.2FD763D2BD74B468.idx  RegularEquipment.cpp.D22BD4948E9272E9.idx  RegularEquipment.hpp.23D54CEB6534EF59.idx  RegularWeapon.cpp.3CACFC9527013E6D.idx  RegularWeapon.hpp.FA295492AC0F3168.idx  Relation.cpp.52C2A1399280D155.idx  Relation.hpp.B7422A4889A43377.idx  Weapon.cpp.1931BB9BE9806F80.idx  Weapon.hpp.24B479557DB9EE3D.idx  main.cpp.D80BCD920AA1A7BC.idx
files/init/: parameters.json
files/save/: parameters.json
src/: CMakeLists.txt
src/models/: CMakeLists.txt
src/models/consumables/: CMakeLists.txt
src/models/equipments/: CMakeLists.txt
tests/: CMakeLists.txt
tests/maths-tests/: CMakeLists.txt  equation-test.cpp  factor-test.cpp  parameter-test.cpp  relation-test.cpp
(+46 files in other folders)
